--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- presentation -->
 
 <div class="container-fluid text-center bg">
-	<img src="img/deis.jpg" alt="deis" class="img-circle img-responsive" width="190px" style="display: inline;">
+	<img src="deis.jpg" alt="deis" class="img-circle img-responsive" width="190px" style="display: inline;">
 	<h3>Deis MAPANGOU</h3>
 	<h4>Etudiant en Informatique et Réseaux pour les Industries et les Services</h4>
 	<h5><strong>BTS 2</strong></h5>
